# carovan-engine

./: .gitignore  CMakeLists.txt  README.md  Sandbox.h  main.cpp
engine/: CMakeLists.txt  Carovan.cpp  Carovan.h
engine/api/opengl/: Common.cpp  Common.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
engine/core/: ImGuiHelper.cpp  ImGuiHelper.h  InputManager.cpp  InputManager.h  Logger.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
engine/ecs/: Component.h  Entity.h  Scene.cpp  Scene.h
engine/lib/: CMakeLists.txt
engine/lib/entt/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/lib/glad/src/: glad.c
engine/lib/glfw/: CMakeLists.txt
engine/math/: Vector.h  Vector4.h
engine/utils/: Assertion.h  Defines.h  Singleton.h
res/: Fragment.glsl  Vertex.glsl
